Unit tests coverage, code refactoring + project building